--- a/style.css
+++ b/style.css
@@ -16,4 +16,31 @@ header{
     color: black;
     font-size: 35px;
     border-bottom: 3px solid black;
-    
+    padding: 20px;
+} 
+.chamada-texto{
+    margin-right: 5%;
+
+}
+h1{
+    font-size: 16px;
+}
+.categoria{
+    margin-top: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.categoria-videos{
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+
+}
+.categoria-videos img.hover{
+    height: 200px;
+    opacity: 0.5;
+}
+.categoria-videos img.hover{
+    opacity: 1.0;
+    border: 3px solid blueviolet;
+}
